# ProxyForge

./: README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: aiohttp_client.py  basic_usage.py  config.example.yaml  http_api_provider.py  httpx_client.py  redis_persistence.py  scrapy_integration.py
proxyforge/: __init__.py  cli.py  config.py  exceptions.py  health.py  health_urls.py  lease.py  models.py  pool.py  rate_limit.py  router.py  score_window.py  scoring.py  serialization.py  state.py  wiring.py
proxyforge/integrations/: __init__.py  aiohttp.py  httpx_client.py  scrapy.py
proxyforge/providers/: __init__.py  http_api.py  static.py
proxyforge/scheduling/: __init__.py  lease_acquisition.py
proxyforge/services/: __init__.py  health.py  health_urls.py  score_window.py  scoring.py
proxyforge/services/providers/: __init__.py  base.py  http_api.py  static.py
proxyforge/services/storage/: __init__.py  base.py  persist.py  redis.py  redis_coordinator.py  redis_rate_limit.py
proxyforge/storage/: __init__.py  base.py  persist.py  redis.py  redis_coordinator.py  redis_rate_limit.py
tests/: conftest.py  test_aiohttp_integration.py  test_config_phase1.py  test_core.py  test_health.py  test_health_urls.py  test_http_api_provider.py  test_persist_buffer.py  test_phase2.py  test_pool.py  test_rate_limit.py  test_redis_distributed.py  test_redis_rate_limit.py  test_redis_storage.py  test_score_window.py  test_scrapy_integration.py  test_serialization.py
